# model-portfolio-sim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PRODUCT.md  README.md  mkdocs.yml  package.json  turbo.json
.github/: copilot-instructions.md
.impeccable/critique/: 2026-06-12T01-51-01Z__apps-web-src.md  2026-06-13T13-11-57Z__apps-web-src-pages-market-tsx.md
.serena/: project.yml
apps/api/: pyproject.toml
apps/api/app/: main.py  schemas.py  store.py
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: CommandPalette.tsx  DragSeries.tsx  Heartbeat.tsx  Masthead.tsx  PipelineMonitor.tsx  Tiles.tsx  charts.tsx  motion.tsx  ui.tsx
apps/web/src/lib/: api.ts  engine.tsx
apps/web/src/pages/: BalanceSheet.tsx  Dashboard.tsx  Kpis.tsx  Market.tsx  MorningSheet.tsx  Optimizer.tsx  Positions.tsx  Settings.tsx  Strategy.tsx  Workbench.tsx
apps/web/src/workspace/: Workspace.tsx  WorkspaceCommandPalette.tsx  dockview-theme.css  layouts.ts  panels.tsx
docs/: architecture.md  index.md  portfolio-risk-engine.md
