[project]
name = "rates-api"
version = "0.1.0"
description = "FastAPI service over the mbs-risk engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6", "mbs-risk",
]

[tool.uv.sources]
mbs-risk = { path = "../../packages/mbs-risk", editable = true }
